Add real readiness function
Make Redis connection handling more robust
Add Redis error handler
