# chapter10/src/server/api/controllers/games/router.js
@@ -3,6 +3,7 @@ import controller from './controller';
 
 export default express
   .Router()
+  .get('/ready', controller.isReady)
   .get('/:id', controller.getGame)
   .post('/', controller.createGame)
   .get('/:id/:element', controller.getGameItem)
